force-app/main/default/objects/PRISM_Inspection__c/PRISM_Inspection__c.object-meta.xml
<CustomObject>
    <description>Field inspection record for an Attachment — captures date, inspector, method, and hazard conditions.</description>

    <label>Inspection</label>
    <nameField>
        <label>Inspection ID</label>
        <type>AutoNumber</type>
        <displayFormat>INS-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>