force-app/main/default/objects/PRISM_Inspection__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <type>MasterDetail</type>
    <referenceTo>PRISM_Attachment__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    
</CustomField>