force-app/main/default/objects/PRISM_Inspection__c/fields/FireDangerLevel__c.field-meta.xml
<CustomField>
    <fullName>FireDangerLevel__c</fullName>
    <label>Fire Danger Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Moderate</fullName><default>false</default><label>Moderate</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Very High</fullName><default>false</default><label>Very High</label></value>
            <value><fullName>Extreme</fullName><default>false</default><label>Extreme</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>