force-app/main/default/objects/PRISM_Inspection__c/fields/HumidityPercent__c.field-meta.xml
<CustomField>
    <fullName>HumidityPercent__c</fullName>
    <label>Humidity (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>