force-app/main/default/objects/PRISM_Inspection__c/fields/InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDate__c</fullName>
    <label>Inspection Date</label>
    <type>Date</type>
    
</CustomField>