force-app/main/default/objects/PRISM_Inspection__c/fields/InspectionMethod__c.field-meta.xml
<CustomField>
    <fullName>InspectionMethod__c</fullName>
    <label>Inspection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Ground Patrol</fullName><default>true</default><label>Ground Patrol</label></value>
            <value><fullName>Aerial Drone</fullName><default>false</default><label>Aerial Drone</label></value>
            <value><fullName>Helicopter</fullName><default>false</default><label>Helicopter</label></value>
            <value><fullName>Climbing</fullName><default>false</default><label>Climbing</label></value>
            <value><fullName>Remote Sensing</fullName><default>false</default><label>Remote Sensing</label></value>
        </valueSetDefinition>
    </valueSet>
    
</CustomField>