force-app/main/default/objects/PRISM_Inspection__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <label>Inspector</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <required>true</required>
</CustomField>