force-app/main/default/objects/PRISM_Inspection__c/fields/NearestActiveFireMiles__c.field-meta.xml
<CustomField>
    <fullName>NearestActiveFireMiles__c</fullName>
    <label>Nearest Active Fire (Miles)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>