force-app/main/default/objects/PRISM_Inspection__c/fields/RedFlagWarning__c.field-meta.xml
<CustomField>
    <fullName>RedFlagWarning__c</fullName>
    <label>Red Flag Warning Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>