force-app/main/default/objects/PRISM_Inspection__c/fields/TemperatureFahrenheit__c.field-meta.xml
<CustomField>
    <fullName>TemperatureFahrenheit__c</fullName>
    <label>Temperature (°F)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>