force-app/main/default/objects/PRISM_Inspection__c/fields/WindSpeedMPH__c.field-meta.xml
<CustomField>
    <fullName>WindSpeedMPH__c</fullName>
    <label>Wind Speed (MPH)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>